--- a/infra/k8s/posts-depl.yaml
+++ b/infra/k8s/posts-depl.yaml
@@ -15,3 +15,17 @@ spec:
       containers:
         - name: posts
           image: anselem77/posts
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: posts-clusterip-srv
+spec:
+  type: ClusterIP
+  selector:
+    app: posts
+  ports:
+    - name: posts
+      protocol: TCP
+      port: 4000
+      targetPort: 4000
