--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -10,10 +10,31 @@ spec:
     - host: posts.com
       http:
         paths:
-          - path: "/api/v1/posts"
+          - path: "/api/v1/posts/create"
             pathType: Prefix
             backend:
               service:
                 name: posts-clusterip-srv
                 port:
                   number: 4000
+          - path: "/api/v1/posts"
+            pathType: Prefix
+            backend:
+              service:
+                name: query-clusterip-srv
+                port:
+                  number: 4002
+          - path: "/api/v1/posts/?(.*)/comments"
+            pathType: Prefix
+            backend:
+              service:
+                name: comments-clusterip-srv
+                port:
+                  number: 4001
+          - path: /?(.*)
+            pathType: Prefix  
+            backend:
+              service:
+                name: frontend-clusterip-srv
+                port:
+                  number: 3000
